<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.profile.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_20">

        <EditText
            android:id="@+id/et_change_password_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/old_password"
            android:background="@drawable/xml_rounded_border_gray"
            android:ems="10"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="@dimen/space_10"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/et_change_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5"
            android:autofillHints="@string/new_password"
            android:background="@drawable/xml_rounded_border_gray"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="@dimen/space_10"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/et_change_password_new_con"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_5"
            android:autofillHints="@string/confirm_new_password"
            android:background="@drawable/xml_rounded_border_gray"
            android:ems="10"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:maxLines="1"
            android:padding="@dimen/space_10"
            android:textCursorDrawable="@null" />

        <Button
            android:id="@+id/btn_change_password_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20"
            android:background="@drawable/xml_view_rounded_green"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_18" />

    </LinearLayout>

</ScrollView>