<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_20"
    tools:context=".ui.order_detail.OrderDetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:transitionName="animListtodetail"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="@dimen/space_10"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space_10"
            android:paddingTop="@dimen/space_10"
            android:paddingEnd="@dimen/space_10"
            android:paddingBottom="@dimen/space_15">

            <ImageView
                android:id="@+id/iv_order_marker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_marker"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_order_detail_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_10"
                android:gravity="start"
                android:maxLines="1"
                android:textAlignment="viewStart"
                android:textSize="@dimen/text_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_order_marker"
                app:layout_constraintTop_toTopOf="@id/iv_order_marker" />

            <TextView
                android:id="@+id/line1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10"
                android:text="@string/order_id"
                android:textAllCaps="true"
                android:textSize="@dimen/text_12"
                app:layout_constraintStart_toStartOf="@id/tv_order_detail_address"
                app:layout_constraintTop_toBottomOf="@id/tv_order_detail_address" />

            <TextView
                android:id="@+id/tv_order_detail_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/order_id"
                android:textAlignment="viewStart"
                android:textSize="@dimen/text_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/line1"
                app:layout_constraintStart_toStartOf="@id/tv_order_detail_date_time"
                app:layout_constraintTop_toTopOf="@id/line1" />

            <TextView
                android:id="@+id/line3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_5"
                android:text="@string/delivery_date"
                android:textSize="@dimen/text_12"
                app:layout_constraintStart_toStartOf="@id/tv_order_detail_address"
                app:layout_constraintTop_toBottomOf="@id/tv_order_detail_id" />

            <TextView
                android:id="@+id/tv_order_detail_date_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_10"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/order_id"
                android:textAlignment="viewStart"
                android:textSize="@dimen/text_12"
                app:layout_constraintBottom_toBottomOf="@id/line3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/line3"
                app:layout_constraintTop_toTopOf="@id/line3" />

            <TextView
                android:id="@+id/line4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_5"
                android:text="@string/delivery_time"
                android:textSize="@dimen/text_12"
                app:layout_constraintStart_toStartOf="@id/tv_order_detail_address"
                app:layout_constraintTop_toBottomOf="@id/tv_order_detail_date_time" />

            <TextView
                android:id="@+id/tv_order_detail_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_10"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/order_id"
                android:textAlignment="viewStart"
                android:textSize="@dimen/text_12"
                app:layout_constraintBottom_toBottomOf="@id/line4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/line3"
                app:layout_constraintTop_toTopOf="@id/line4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10"
        android:text="@string/order_items"
        android:textSize="@dimen/text_18"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:gravity="start"
            android:text="@string/product"
            android:textAlignment="viewStart" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:gravity="center"
            android:text="@string/qty" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:layout_marginTop="@dimen/space_5"
        android:layout_marginBottom="@dimen/space_5"
        android:background="@color/colorGray" />

    <include
        android:id="@+id/pb_order_detail"
        layout="@layout/include_progressbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_order_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:layout_marginTop="@dimen/space_5"
        android:layout_marginBottom="@dimen/space_5"
        android:background="@color/colorGray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_qty"
            android:textAllCaps="true"
            android:textSize="@dimen/text_16" />

        <TextView
            android:id="@+id/tv_order_detail_total_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_5"
            android:text="3"
            android:textAllCaps="true"
            android:textSize="@dimen/text_16" />

    </LinearLayout>

</LinearLayout>