<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorPrimary" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginTop="@dimen/space_20"
            android:layout_marginEnd="@dimen/space_20"
            android:gravity="start"
            android:textAlignment="viewStart">

            <EditText
                android:id="@+id/et_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="start"
                android:hint="@string/full_name"
                android:paddingStart="@dimen/space_10"
                android:paddingEnd="@dimen/space_10"
                android:textAlignment="viewStart" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:layout_marginTop="@dimen/space_10"
            android:layout_marginBottom="@dimen/space_20"
            android:background="@color/colorBG" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginEnd="@dimen/space_20"
            android:gravity="start"
            android:textAlignment="viewStart">

            <EditText
                android:id="@+id/et_profile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="start"
                android:hint="@string/phone_number"
                android:paddingStart="@dimen/space_10"
                android:paddingEnd="@dimen/space_10"
                android:paddingBottom="@dimen/space_10"
                android:textAlignment="viewStart" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:layout_marginTop="@dimen/space_10"
            android:layout_marginBottom="@dimen/space_20"
            android:background="@color/colorBG" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginEnd="@dimen/space_20"
            android:gravity="start"
            android:textAlignment="viewStart">

            <EditText
                android:id="@+id/et_profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="start"
                android:hint="@string/email_id"
                android:paddingStart="@dimen/space_10"
                android:paddingEnd="@dimen/space_10"
                android:paddingBottom="@dimen/space_10"
                android:textAlignment="viewStart" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:layout_marginTop="@dimen/space_10"
            android:layout_marginBottom="@dimen/space_20"
            android:background="@color/colorBG" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginEnd="@dimen/space_20"
            android:gravity="start"
            android:textAlignment="viewStart">

            <EditText
                android:id="@+id/et_profile_id_proof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="start"
                android:hint="@string/id_proof"
                android:paddingStart="@dimen/space_10"
                android:paddingEnd="@dimen/space_10"
                android:paddingBottom="@dimen/space_10"
                android:textAlignment="viewStart" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:layout_marginTop="@dimen/space_10"
            android:layout_marginBottom="@dimen/space_20"
            android:background="@color/colorBG" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginEnd="@dimen/space_20"
            android:gravity="start"
            android:textAlignment="viewStart">

            <EditText
                android:id="@+id/et_profile_licence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="start"
                android:hint="@string/licence_no"
                android:paddingStart="@dimen/space_10"
                android:paddingEnd="@dimen/space_10"
                android:paddingBottom="@dimen/space_10"
                android:textAlignment="viewStart" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_1"
            android:layout_marginTop="@dimen/space_10"
            android:layout_marginBottom="@dimen/space_10"
            android:background="@color/colorBG" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginTop="@dimen/space_10"
            android:layout_marginEnd="@dimen/space_15"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginEnd="@dimen/space_10"
                android:layout_marginBottom="@dimen/space_5"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorBG"
                app:cardCornerRadius="@dimen/space_10">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/id_photo"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/text_18" />

                    <ImageView
                        android:id="@+id/iv_profile_id_photo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="@dimen/space_10"
                android:layout_marginEnd="@dimen/space_5"
                android:layout_marginBottom="@dimen/space_5"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorBG"
                app:cardCornerRadius="@dimen/space_10">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/licence_photo"
                        android:textColor="@color/colorText"
                        android:textSize="@dimen/text_18" />

                    <ImageView
                        android:id="@+id/iv_profile_licence_photo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                </FrameLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <Button
            android:id="@+id/btn_profile_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_20"
            android:layout_marginTop="@dimen/space_20"
            android:layout_marginEnd="@dimen/space_20"
            android:layout_marginBottom="@dimen/space_20"
            android:background="@drawable/xml_view_rounded_green"
            android:text="@string/change_password"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_18" />

    </LinearLayout>

</ScrollView>